--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <script src="https://quge5.com/88/tag.min.js" data-zone="193973" async data-cfasync="false"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galeria de Afiliado</title>
@@ -96,3 +97,4 @@
   </script>
 </body>
 </html>
+
